fixed spacing

--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ main {
 .nav-link svg {
     width: 2rem;
     min-width: 2rem;
-    margin: 0 1.5rem;
+    margin: 0 1rem;
 }
 
 .fa-primary {
